--- a/src/Components/Login/styles.css
+++ b/src/Components/Login/styles.css
@@ -71,4 +71,8 @@
   .opacity{
     opacity:0.75;
   }
-  
+  .highlight{
+    /*text-decoration:underline wavy rgb(211, 48, 75);*/
+    color:rgb(223, 41, 71);
+    
+  }
