--- a/src/Components/StudentInfo/studentInfo.css
+++ b/src/Components/StudentInfo/studentInfo.css
@@ -18,3 +18,12 @@
     height:100vh;
     width:100%;
 }
+
+.burger{
+    position: absolute;
+}
+
+.crossButton{
+    height: 10px;
+    width: 10px;
+}
