--- a/src/Components/Welcome/Welcome.css
+++ b/src/Components/Welcome/Welcome.css
@@ -17,37 +17,39 @@
     cursor: pointer;
    border-radius: 12px;
    border-radius: 25px;
+   
    border: 2px solid #73AD21;
     
    
 }
 .welcome2{
     width:400px;
-    opacity: 0.85;
+    opacity: 0.80;
     display:flex;
     flex-direction:column;
     padding: 20px 40px;
-    border-radius:10px;
+  
     box-shadow: 0px 10px 50pX white;
     background-color: #ffffff;
     cursor: pointer;
    border-radius: 12px;
    border-radius: 25px;
+   
    border: 2px solid #73AD21;
    
   }
   
-  h1{
+  .welcome h1{
     text-align:center;
     width:100%;
-    color:#E4B7E5;
+    color:red;
     font-weight:lighter;
     font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans" ,"Helvetica Neue", sans-serif;
   }
-  h3{
+  .welcome h3{
     text-align:center;
     width:100%;
-    color:#E4B7E5;
+    color:#e711eb;
     font-weight:lighter;
     font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans" ,"Helvetica Neue", sans-serif;
   }
@@ -66,11 +68,8 @@
      font-size:0.75em;
      display:relative;
    }
-   
-
-  
- 
-   .button{
+   .bb1{
+     
      width:100%;
     display:flex;  
     flex-direction:column;
@@ -78,12 +77,23 @@
     flex-wrap:wrap;
     border-radius: 12px;
     border-radius: 25px;
-    padding:20px 40px;
-    margin-bottom:15px;
-    margin-top:15px;
-    margin: 4px 2px;
-    border: 2px solid #73AD21;
-     justify-content: center; 
-     
+    
+    
     
    }
+   .bb2{
+     
+     width:100%;
+    display:flex;  
+    flex-direction:column;
+    cursor: pointer;
+    flex-wrap:wrap;
+    border-radius: 12px;
+    border-radius: 25px;
+    padding-top:15px;
+  
+   }
+
+  
+ 
+   
