--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -12,7 +12,7 @@
        background-size: cover;
   }
   .form-wrapper{
-    opacity: 0.85;
+    opacity: 0.80; 
     width:400px;
     display:flex;
     flex-direction:column;
@@ -35,27 +35,34 @@
     font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans" ,"Helvetica Neue", sans-serif;
   }
   
-  .form-wrapper.label{
+  .form-wrapper label{
     font-size: 1.0em;
     margin-bottom:0.25em;
     color:red;
     font-weight:lighter;
+    text-align: center;
+    justify-content: center;
   }
-  .form-wrapper.input{
+  .form-wrapper input{
     padding:10px 10px;
     border-radius:5px;
     outline:none;
     border:1px solid #FF88DA;
+  }
+  .form-wrapper h1{
+    text-align: center;
+    justify-content: center;
+    color:rgb(223, 41, 71);
   }
   .form-wrapper.input::placeholder{
      font-size:1.2em;
      font-weight:lighter;
      color:#b388eb;
    }
-   .form-wrapper.input.error{
+   .form-wrapper input.error{
      border:1px solid red;
    }
-   .form-wrapper.errorMessage{
+   .errorMessage{
      color:red;
      font-size:0.75em;
      display:relative;
@@ -73,7 +80,6 @@
      width:100%;
    }
    .createAccount{
-    
     display:flex;
     flex-direction:column;
     margin-bottom:15px;
@@ -85,6 +91,11 @@
     text-decoration: none;
     text-shadow: none;
   }
+  .MUJ{
+    color:rgb(223, 41, 71);
+    position:absolute;
+     top:0px;
+  }
 
    .form-wrapper.Next{
      
@@ -95,6 +106,13 @@
  .form-wrapper.p span {
    margin-top: auto;
     display: block;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .center{
+    text-align: center;
+    justify-content: center;
   }
   
    /* .bkgImg {
@@ -168,7 +186,7 @@
     background: rgba(0, 0, 0, 0.3);
   }
   .opacity{
-    opacity:0.75;
+    opacity:0.80;
   }
   .highlight{
     /*text-decoration:underline wavy rgb(211, 48, 75);*/
