--- a/src/Components/Pay/Pay.css
+++ b/src/Components/Pay/Pay.css
@@ -26,7 +26,7 @@
         text-align:center;
        position:absolute;
         align-items:center;
-        margin-top:100px; 
+        margin-top:50px; 
         margin-left:580px;
         margin-bottom:0.25em;  
         display:flex;
@@ -44,5 +44,7 @@
         text-decoration: underline;
         color:red;
     }
-    
-    
+    .h{
+         background-color:#FFFF00;
+         }
+   
