--- a/src/Components/Pay/Pay.css
+++ b/src/Components/Pay/Pay.css
@@ -1,12 +1,13 @@
 .Payment{
-
-    /* The image used */
-    background-image: url(https://i.ytimg.com/vi/F3BrKOi18lE/maxresdefault.jpg);
-  
-    /* Full height */
+        /* Full height */
     height: 100vh;
     width:100%;
+   
+
+    /* The image used */
+    background-image:url(https://i.ytimg.com/vi/F3BrKOi18lE/maxresdefault.jpg);
   
+    
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -36,6 +37,7 @@
         
     }
     .Payment h1{
+        margin-top:0px;
         text-align: center;
 
         color:purple;
