--- a/src/Components/Admin/Admin.css
+++ b/src/Components/Admin/Admin.css
@@ -1,5 +1,5 @@
 .ba{
-  background:url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+  background:url("https://2.bp.blogspot.com/-Y-M9VkJliMQ/WrKkPIRmAsI/AAAAAAAAGg4/eOUrZ8bs3qEuzcfoUwNxLItr6I-57ikEwCLcBGAs/s1600/Jamboard_screensaver_ticker_800.gif");
   background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
